name:                nayoro
version:             0.1.0.0
synopsis:            A tool to sum up personal identities.
description:         A tool to search for personal identities.
                     .
                     Most of organizations have several communication tools,
                     chat application, e-mail address, phone number, IRC, and so on.
                     However we have to know the identity of several tools to communicate others.
                     For example, When I'd like to call John, I should know the his phone number.
                     This web application aggregates each IDs of services.
homepage:            https://github.com/liquidamber/nayoro
license:             MIT
license-file:        LICENSE
author:              liquid_amber <liquid.amber.ja@gmail.com>
maintainer:          liquid_amber <liquid.amber.ja@gmail.com>
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Nayoro.Config
  build-depends:       base >=4.7 && <4.8
                     , array
                     , text
                     , vector
                     , yaml >= 0.8.4

executable nayoro
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , text
                     , vector
                     , yaml
                     , nayoro

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  Other-Modules:       Nayoro.ConfigSpec
  build-depends:       base == 4.7.*
                     , hspec >= 1.3
                     , QuickCheck
                     , yaml
                     , nayoro
