name:                nayoro
version:             0.1.0.0
synopsis:            A tool to sum up personal identities.
description:         A tool to search for personal identities.
                     .
                     Most of organizations have several communication tools,
                     chat application, e-mail address, phone number, IRC, and so on.
                     However we have to know the identity of several tools to communicate others.
                     For example, When I'd like to call John, I should know the his phone number.
                     This web application aggregates each IDs of services.
homepage:            https://github.com/liquidamber/nayoro
license:             MIT
license-file:        LICENSE
author:              liquid_amber <liquid.amber.ja@gmail.com>
maintainer:          liquid_amber <liquid.amber.ja@gmail.com>
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable nayoro
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Nayoro.Config
                     , Nayoro.Model
                     , Nayoro.Web
                     , Nayoro.Util
  build-depends:       base >=4.6 && <4.8
                     -- commonly used
                     , array
                     , bytestring
                     , data-default >= 0.5.3
                     , text
                     , vector
                     -- Nayoro.Config
                     , yaml >=0.8.4
                     -- Nayoro.Model
                     , persistent >=2.1
                     , persistent-template
                     , persistent-sqlite
                     , persistent-postgresql
                     , esqueleto
                     , time
                     , transformers
                     , conduit
                     , resourcet
                     -- Nayoro.Util
                     , vector
                     -- Nayoro.Web
                     , apiary >=1.2
                     , apiary-persistent
                     , apiary-logger
                     , aeson ==0.8.*
                     , warp >=3.0

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src test
  main-is:             Spec.hs
  Other-Modules:       Nayoro.ConfigSpec
  build-depends:       base >=4.6
                     , apiary >=1.1
                     , array
                     , bytestring
                     , data-default >= 0.5.3
                     , text
                     , vector
                     , warp >=3.0
                     , yaml >=0.8.4
                     , hspec >=1.3
                     , QuickCheck
                     , heredoc >=0.2
